# pytest-asyncio

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: main.yml
dependencies/default/: constraints.txt
pytest_asyncio/: __init__.py  plugin.py
tests/: test_event_loop_fixture_finalizer.py  test_py311_task.py
