[project]
name = "pytest-asyncio"
description = "pytest plugin for asyncio"
version = "0.20.4.dev43"
authors = [
    {name = "Joe Black", email = "me@joeblack.nyc"},
]
dependencies = [
  "pytest>=7.0.0",
  "typing-extensions>=3.7.2",
]
requires-python = ">=3.7"

[build-system]
requires = [
  "setuptools>=51.0",
  "wheel>=0.36",
  "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"
